--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,10 @@
     ],
     "plugins": [
         [
+            "@babel/plugin-proposal-logical-assignment-operators"
+        ]
+        , [
+            
             "@babel/plugin-proposal-pipeline-operator",
             {
                 "proposal": "minimal"
