--- a/.eslintrc
+++ b/.eslintrc
@@ -12,10 +12,10 @@
         "no-unused-expressions": 0,
         "no-prototype-builtins": 0,
         "no-async-promise-executor": 0,
+        "no-console": 0,
         "no-shadow": "error",
         "prefer-const": "error",
         "no-param-reassign": "error",
-        "no-console": "error",
         "space-before-function-paren": 0,
         "array-bracket-spacing": "error",
         "object-property-newline": "error",
