--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,23 @@
     "configurations": [
         {
             "type": "node",
+            "name": "Launch",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/index.js",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node"
+            "program": "${file}",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": null,
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/babel-node",
+            "runtimeArgs": [
+              "--nolazy"
+            ],
+            "env": {
+              "NODE_ENV": "development"
+            },
+            "console": "internalConsole",
+            "sourceMaps": true,
+            "outFiles": [],
           }
     ]
 }
